# snakemake-storage-plugin-rsync

./: LICENSE  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_rsync/: __init__.py
tests/: tests.py
